--- a/.github/workflows/build-wheels-upload-pypi.yml
+++ b/.github/workflows/build-wheels-upload-pypi.yml
@@ -69,11 +69,11 @@ jobs:
     runs-on: ${{ matrix.os }}
     env:
       CIBW_ARCHS_MACOS: "x86_64 universal2 arm64"
-      
+
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.9]
+        python-version: ['3.9', '3.10', '3.11', '3.12']
         os: [windows-latest, macos-latest, ubuntu-latest]
         include:
           - os: ubuntu-20.04
@@ -140,6 +140,10 @@ jobs:
     runs-on: [ubuntu-latest]
     needs: [build_wheels, build_sdist]
 
+    permissions:
+      contents: write
+      id-token: write
+
     # upload to PyPI on every tag starting with 'v'
     if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/v')
 
@@ -152,8 +156,4 @@ jobs:
         path: dist
 
     - name: upload_to_pypi
-      uses: pypa/gh-action-pypi-publish@v1.4.1
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_TOKEN }}
-        skip_existing: true
+      uses: pypa/gh-action-pypi-publish@v1
