--- a/.github/workflows/build-wheels-upload-pypi.yml
+++ b/.github/workflows/build-wheels-upload-pypi.yml
@@ -68,15 +68,24 @@ jobs:
 
     runs-on: ${{ matrix.os }}
     env:
-      CIBW_ARCHS_MACOS: "auto"
+      CIBW_ARCHS_MACOS: "x86_64 universal2 arm64"
 
     strategy:
       max-parallel: 4
       matrix:
         python-version: ['3.12']
-        os: [macos-latest, ubuntu-latest]
+        os: [windows-latest, macos-latest, ubuntu-latest]
+        include:
+          - os: ubuntu-20.04
+            cibw_archs: "aarch64"
 
     steps:
+      - name: setup QEMU
+        if: matrix.cibw_archs == 'aarch64'
+        uses: docker/setup-qemu-action@v1
+        with:
+          platforms: arm64
+
       - name: checkout
         uses: actions/checkout@v3
 
@@ -89,14 +98,26 @@ jobs:
         run: python -m pip install cibuildwheel
 
       - name: Build wheels
+        if: matrix.cibw_archs == 'aarch64'
         run: python -m cibuildwheel --output-dir wheelhouse
         env:
-          CIBW_BUILD: "cp310-* cp311-* cp312-*"
+          CIBW_BUILD: "cp3*"
           CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
           CIBW_MANYLINUX_I686_IMAGE: manylinux2014
           CIBW_BUILD_VERBOSITY: 1
           CIBW_SKIP: '*-musllinux_*'
-          CIBW_ARCHS_LINUX: "x86_64"
+          CIBW_ARCHS_LINUX: "aarch64"
+
+      - name: Build wheels
+        if: matrix.cibw_archs != 'aarch64'
+        run: python -m cibuildwheel --output-dir wheelhouse
+        env:
+          CIBW_BUILD: "cp3*"
+          CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
+          CIBW_MANYLINUX_I686_IMAGE: manylinux2014
+          CIBW_BUILD_VERBOSITY: 1
+          CIBW_SKIP: '*-musllinux_*'
+          CIBW_ARCHS_LINUX: "auto"
 
       - name: Show files
         run: ls -lh wheelhouse
@@ -135,4 +156,4 @@ jobs:
         path: dist
 
     - name: upload_to_pypi
-      uses: pypa/gh-action-pypi-publish@release/v1
+      uses: pypa/gh-action-pypi-publish@v1
