--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,8 @@
 [build-system]
-requires = ["setuptools", "wheel", "oldest-supported-numpy", "Cython"]
+requires = [
+    "setuptools",
+    "wheel",
+    "numpy>=1.25,<2; python_version<'3.11'",
+    "numpy>=2.0,<3; python_version<'3.14'",
+    "Cython"]
 build-backend = "setuptools.build_meta"
