--- a/.github/workflows/build-wheels-upload-pypi.yml
+++ b/.github/workflows/build-wheels-upload-pypi.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Upload sdist
         uses: actions/upload-artifact@v4
         with:
-          name: dist
+          name: dist-sdist
           path: dist/*.tar.gz
 
   build_wheels:
@@ -126,7 +126,7 @@ jobs:
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
-          name: dist
+          name: dist-wheels
           path: ./wheelhouse/*.whl
 
   upload_to_pypi:
@@ -140,11 +140,15 @@ jobs:
     runs-on: [ubuntu-latest]
     needs: [build_wheels, build_sdist]
 
+    strategy:
+      matrix:
+        artifact-suffix: ['sdist', 'wheels']
+
     permissions:
       contents: write
       id-token: write
 
-    # upload to PyPI on every tag starting with 'v'
+    # upload to PyPI on every tag
     if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/')
 
     steps:
@@ -152,7 +156,7 @@ jobs:
 
     - uses: actions/download-artifact@v4
       with:
-        name: dist
+        name: dist-${{ matrix.artifact-suffix }}
         path: dist
 
     - name: upload_to_pypi
