--- a/.github/workflows/build-wheels-upload-pypi.yml
+++ b/.github/workflows/build-wheels-upload-pypi.yml
@@ -126,7 +126,7 @@ jobs:
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
-          name: dist-wheels
+          name: dist-wheels-${{ matrix.os }}
           path: ./wheelhouse/*.whl
 
   upload_to_pypi:
@@ -142,7 +142,11 @@ jobs:
 
     strategy:
       matrix:
-        artifact-suffix: ['sdist', 'wheels']
+        artifact-suffix:
+          - 'sdist'
+          - 'wheels-windows-latest'
+          - 'wheels-macos-latest'
+          - 'wheels-ubuntu-latest'
 
     permissions:
       contents: write
