Use ubuntu-24.04 and re-release 1.2.5

--- a/.github/workflows/build-wheels-upload-pypi.yml
+++ b/.github/workflows/build-wheels-upload-pypi.yml
@@ -74,9 +74,9 @@ jobs:
       max-parallel: 4
       matrix:
         python-version: ['3.12']
-        os: [windows-latest, macos-latest, ubuntu-latest]
+        os: [windows-latest, macos-latest, ubuntu-24.04]
         include:
-          - os: ubuntu-20.04
+          - os: ubuntu-24.04
             cibw_archs: "aarch64"
 
     steps:
